add register on swagger
