# src/app/routes/index.ts
@@ -3,18 +3,18 @@ import newAuthRouter from './auth';
 import newAnswerActivityRouter from './answerActivity';
 import newDraftRouter from './draft';
 import organizationRouter from './organization';
-import newRegisterRouter from './register';
 import newStaticUser from './staticUser';
 import subjectRouter from './subject';
 import newUserRouter from './user';
 import studentRouter from './student';
 import redisRoutes from './redis/redis.routes';
 import activityRouter from './activity.routes';
+import registerRouter from './register.routes';
 
 const routes = Router();
 
 routes.use('/api', organizationRouter);
-routes.use('/api', newRegisterRouter);
+routes.use('/api', registerRouter);
 routes.use('/api', subjectRouter);
 routes.use('/api', newStaticUser);
 routes.use('/api', newAuthRouter);
